# memintelli_flash

./: README.md  analysis_performance_issues.md  pyproject.toml  requirements.txt
docs/: memintelli_flash_feature_tcad_outline.md  optimization_report copy.md  optimization_report.md
examples/: 01_matrix_multiplication.py  02_MLP_inference.py  03_MLP_hardware_aware_training.py  04_mlp_hardware_aware_training_ddp.py  05_vgg_cifar_inference.py  06_vgg16bn_cifar100_finetune.py  07_resnet_cifar_inference.py  08_resnet_imagenet_inference.py  09_mobilenetv2_imagenet_inference.py  10_deit_imagenet_inference.py  11_qwen3_wikitext2_inference.py  12_vgg_imagenet_inference.py  README.md  __init__.py  problem.md
memintelli/: __init__.py
memintelli/NN_layers/: __init__.py  activation.py  convolution.py  functions.py  linear.py  model_decorators.py
memintelli/NN_models/: DeiT.py  Mobilnetv2.py  Qwen3.py  ResNet.py  VGG.py  __init__.py  lenet5.py  resnet_cifar.py  vgg_cifar.py
memintelli/pimpy/: data_formats.py  memmat_tensor.py  utils.py
